# mlbag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlbag/: __init__.py  config.py  device.py  seeding.py
src/mlbag/active_learning/: __init__.py  acquisition.py  loop.py
src/mlbag/cheminformatics/: __init__.py  featurize.py
src/mlbag/data/: __init__.py  pipelines.py  splits.py  text.py
src/mlbag/evaluation/: __init__.py  classification.py  regression.py
src/mlbag/plotting/: __init__.py  confusion.py  curves.py  decision_boundary.py  embeddings.py
src/mlbag/remote/: __init__.py  ssh_runner.py
src/mlbag/tracking/: __init__.py  run_manager.py
src/mlbag/training/: __init__.py  keras_loop.py  torch_loop.py
src/mlbag/tuning/: __init__.py  base.py  bayesian.py  grid.py  random_search.py
src/mlkit/: __init__.py
tests/: conftest.py
tests/integration/: test_keras_training_smoke.py  test_torch_training_smoke.py
tests/unit/: test_active_learning.py  test_cheminformatics.py  test_config.py  test_data.py  test_device.py  test_evaluation.py  test_plotting.py  test_remote.py  test_run_manager.py  test_seeding.py  test_torch_loop_early_stopping.py  test_tuning.py  test_tuning_bayesian.py
