[project]
name = "mlbag"
version = "0.1.0"
description = "Personal toolkit for DS/ML/DL/NLP projects: seeding, run tracking, checkpointing, hyperparameter search, and evaluation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "joblib>=1.3",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.4", "scipy>=1.12"]
torch = ["torch>=2.2"]
tensorflow = ["tensorflow>=2.16"]
nlp = ["nltk>=3.8", "gensim>=4.3", "transformers>=4.40"]
viz = ["seaborn>=0.13", "umap-learn>=0.5"]
bayesian = ["optuna>=3.6"]
chem = ["rdkit>=2024.3"]
remote = ["paramiko>=3.4"]
all = ["mlbag[sklearn,torch,tensorflow,nlp,viz,bayesian,chem,remote]"]

[dependency-groups]
dev = ["ruff>=0.14", "pytest>=9.0", "pytest-cov>=7.0", "mypy>=1.19", "scikit-learn>=1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlbag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing", "--import-mode=importlib", "-m", "not live and not slow"]
markers = [
    "live: hits real external services; skipped unless RUN_LIVE_TESTS=1 and -m live",
    "slow: requires torch/tensorflow/optuna; skipped by default, run with -m slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# rdkit's bundled .pyi stubs have a syntax error mypy can't parse (non-default arg after
# default in rdchem.pyi) as of rdkit 2026.3.3 — skip following them rather than crash.
# follow_imports only affects stub-only packages like rdkit-stubs when paired with
# follow_imports_for_stubs.
module = "rdkit.*"
follow_imports = "skip"
follow_imports_for_stubs = true
